--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,9 @@ npminstall-debug.log
 
 
 # local env files
-.env.local
-.env.*.local
-.env.development
+# .env.local
+# .env.*.local
+# .env.development
 
 # Log files
 npm-debug.log*
